--- a/src/containers/CreateWallet/CreateWallet.css
+++ b/src/containers/CreateWallet/CreateWallet.css
@@ -1,3 +1,7 @@
 .create-wallet-container {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   justify-content: center;
 }
