--- a/src/containers/ImportWallet/ImportWallet.css
+++ b/src/containers/ImportWallet/ImportWallet.css
@@ -1,3 +1,7 @@
 .import-wallet-container {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   justify-content: center;
 }
