--- a/src/components/globals.css
+++ b/src/components/globals.css
@@ -55,3 +55,10 @@ button {
   /* Corrects inability to style clickable `input` types in iOS */
   -webkit-appearance: none;
 }
+
+.fill-space {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
