--- a/src/components/LoadingSpinner/LoadingSpinner.scss
+++ b/src/components/LoadingSpinner/LoadingSpinner.scss
@@ -1,26 +1,3 @@
-.loader.large,
-.loader.large:after {
-  border-bottom: 8px solid rgba(255, 255, 255, 0.2);
-  border-left: 8px solid #ffffff;
-  border-radius: 50%;
-  border-right: 8px solid rgba(255, 255, 255, 0.2);
-  border-top: 8px solid rgba(255, 255, 255, 0.2);
-  height: 60px;
-  width: 60px;
-}
-
-.loader.small,
-.loader.small:after {
-  border-bottom: 4px solid rgba(255, 255, 255, 0.2);
-  border-left: 4px solid #ffffff;
-  border-radius: 50%;
-  border-right: 4px solid rgba(255, 255, 255, 0.2);
-  border-top: 4px solid rgba(255, 255, 255, 0.2);
-  height: 16px;
-  margin: -4px auto;
-  width: 16px;
-}
-
 .loader {
   margin: auto;
   font-size: 10px;
@@ -30,7 +7,29 @@
   transform: translateZ(0);
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
+
+  &.large, &.large:after {
+    border-bottom: 8px solid rgba(255, 255, 255, 0.2);
+    border-left: 8px solid #ffffff;
+    border-radius: 50%;
+    border-right: 8px solid rgba(255, 255, 255, 0.2);
+    border-top: 8px solid rgba(255, 255, 255, 0.2);
+    height: 60px;
+    width: 60px;
+  }
+
+  &.small, &.small:after {
+    border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+    border-left: 4px solid #ffffff;
+    border-radius: 50%;
+    border-right: 4px solid rgba(255, 255, 255, 0.2);
+    border-top: 4px solid rgba(255, 255, 255, 0.2);
+    height: 16px;
+    margin: -4px auto;
+    width: 16px;
+  }
 }
+
 @-webkit-keyframes load8 {
   0% {
     -webkit-transform: rotate(0deg);
