--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -1,9 +1,9 @@
 .text-area-wrapper {
   display: flex;
   margin-bottom: 16px;
-}
-
-.text-area-wrapper textarea {
-  flex: 1;
-  padding: 8px;
+  
+  textarea {
+    flex: 1;
+    padding: 8px;
+  }
 }
