--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,17 +1,3 @@
-.outer-wrapper {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-}
-
-.container-wrapper {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  padding: 16px;
-  overflow: auto;
-}
-
 h1 {
   margin: 0 0 16px 0;
 }
@@ -22,12 +8,17 @@ p {
 }
 
 a {
-  color: #74A8DC;
+  @include themeGen() {
+    color: getThemeVal('linkColor');
+  }
 }
 
 a:hover {
-  color: #49a4ff;
   cursor: pointer;
+
+  @include themeGen() {
+    color: getThemeVal('linkColorHover');
+  }
 }
 
 /* Reset <button> styles */
@@ -61,4 +52,18 @@ button {
   display: flex;
   flex: 1;
   justify-content: center;
+}
+
+.outer-wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.container-wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 16px;
+  overflow: auto;
 }
