--- a/src/components/HeaderBar/HeaderBar.scss
+++ b/src/components/HeaderBar/HeaderBar.scss
@@ -1,9 +1,12 @@
 .header-bar {
   align-items: center;
-  border-bottom: 1px solid #ffffff;
   display: flex;
   font-size: 18px;
   height: 44px;
   justify-content: space-between;
   padding: 0 8px;
+
+  @include themeGen() {
+    border-bottom: 1px solid getThemeVal('headerBarBorderColor');
+  }
 }
