--- a/src/components/MoreButton/MoreButton.scss
+++ b/src/components/MoreButton/MoreButton.scss
@@ -1,8 +1,17 @@
 .more-button {
   .more-button-row {
-    background-color: #ffffff;
     height: 2px;
     margin: 6px 0;
     width: 24px;
+
+    @include themeGen() {
+      background-color: getThemeVal('headerBarMoreButtonColor');
+    }
+  }
+
+  &:hover .more-button-row {
+    @include themeGen() {
+      background-color: getThemeVal('headerBarMoreButtonHoverColor');
+    }      
   }
 }
