--- a/src/components/LoadingSpinner/LoadingSpinner.scss
+++ b/src/components/LoadingSpinner/LoadingSpinner.scss
@@ -8,22 +8,27 @@
   -webkit-animation: load8 1.1s infinite linear;
   animation: load8 1.1s infinite linear;
 
+  @include themeGen() {
+    border-color: getThemeVal('loadingSpinnerTransparentColor') !important;
+    border-left-color: getThemeVal('loadingSpinnerIndicatorColor') !important;
+  }
+
   &.large, &.large:after {
-    border-bottom: 8px solid rgba(255, 255, 255, 0.2);
-    border-left: 8px solid #ffffff;
+    border-bottom: 8px solid;
+    border-left: 8px solid;
     border-radius: 50%;
-    border-right: 8px solid rgba(255, 255, 255, 0.2);
-    border-top: 8px solid rgba(255, 255, 255, 0.2);
+    border-right: 8px solid;
+    border-top: 8px solid;
     height: 60px;
     width: 60px;
   }
 
   &.small, &.small:after {
-    border-bottom: 4px solid rgba(255, 255, 255, 0.2);
-    border-left: 4px solid #ffffff;
+    border-bottom: 4px solid;
+    border-left: 4px solid;
     border-radius: 50%;
-    border-right: 4px solid rgba(255, 255, 255, 0.2);
-    border-top: 4px solid rgba(255, 255, 255, 0.2);
+    border-right: 4px solid;
+    border-top: 4px solid;
     height: 16px;
     margin: -4px auto;
     width: 16px;
