--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -1,5 +1,5 @@
 $themes: (
-  'podverse': (
+  'podverse-dark': (
     'buttonDisabledBackgroundColor': #808080,
     'buttonDisabledBorderColor': #808080,
     'buttonDisabledTextColor': #CCCCCC,
