--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -39,7 +39,9 @@ $themes: (
     'menuItemHoverTextColor': #CCCCCC,
 
     'popupBackgroundColor': #000000,
-    'popupBorderColor': #333333
+    'popupBorderColor': #333333,
+
+    'textColor': #FFFFFF
   ),
   'podverse-light': ()
 );
