Add hideContainer handling

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,6 +47,10 @@ button {
   -webkit-appearance: none;
 }
 
+.hide {
+  display: none !important;
+}
+
 .theme-wrapper {
   display: flex;
   flex: 1;
