Start to add ExportWallet

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -25,7 +25,9 @@ $themes: (
     'buttonDangerHoverBorderColor': #C43745,
     'buttonDangerHoverTextColor': #FFFFFF,
 
-    'headerBarBorderColor': #CCCCCC,
+    'divider': #777777,
+
+    'headerBarBorderColor': #777777,
     'headerBarMoreButtonColor': #FFFFFF,
     'headerBarMoreButtonHoverColor': #CCCCCC,
 
