--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-h1 {
+h1, h2 {
   margin: 0 0 16px 0;
 }
 
@@ -18,6 +18,19 @@ a:hover {
 
   @include themeGen() {
     color: getThemeVal('linkTextColorHover');
+  }
+}
+  
+hr {
+  border-bottom-width: 0;
+  border-left-width: 0;
+  border-right-width: 0;
+  border-top-width: 1px;
+  margin: 0;
+  width: 100%;
+
+  @include themeGen() {
+    border-color: getThemeVal('divider');
   }
 }
 
