Add TextInput; start to add settings storage

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 @import '../components/MoreButton/MoreButton.scss';
 @import '../components/RecipientTable/RecipientTable.scss';
 @import '../components/TextArea/TextArea.scss';
+@import '../components/TextInput/TextInput.scss';
 @import '../containers/About/About.scss';
 @import '../containers/Boost/Boost.scss';
 @import '../containers/Consent/Consent.scss';
