--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -40,10 +40,16 @@ $themes: (
     'menuItemTextColor': #FFFFFF,
     'menuItemHoverTextColor': #CCCCCC,
 
-    'popupBackgroundColor': #000000,
+    'popupBackgroundColor': #030626,
     'popupBorderColor': #333333,
 
-    'textColor': #FFFFFF
+    'textColor': #FFFFFF,
+    'textSecondaryColor': #CCCCCC,
+
+    'textInputBackgroundColor': #0F1235,
+    'textInputEyebrowColor': #74A8DC,
+    'textInputFocusBorderColor': #007fff,
+    'textInputPlaceholderColor': #CCCCCC
   ),
   'podverse-light': ()
 );
