--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 @import './themes.scss';
 @import './globals.scss';
 @import '../components/BackButton/BackButton.scss';
