--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -47,9 +47,11 @@ $themes: (
     'textSecondaryColor': #CCCCCC,
 
     'textInputBackgroundColor': #0F1235,
+    'textInputBorderColor': #252a6499,
     'textInputEyebrowColor': #74A8DC,
     'textInputFocusBorderColor': #007fff,
-    'textInputPlaceholderColor': #CCCCCC
+    'textInputPlaceholderColor': #CCCCCC,
+    'textInputTextColor': #FFFFFF
   ),
   'podverse-light': ()
 );
