--- a/src/components/RecipientTable/RecipientTable.scss
+++ b/src/components/RecipientTable/RecipientTable.scss
@@ -33,10 +33,18 @@
       .name {
         font-weight: 600;
       }
-      
-      .split {
-        flex: 0 0 auto;
-        margin-left: 16px;
+
+      .numbers-wrapper {
+        display: flex;
+
+        .amount {
+          flex: 0 0 auto;
+          margin-left: 16px;
+        }
+        
+        .split {
+          flex: 0 0 auto;
+        }
       }
     }
   }
