Continue value transactions on Boost screen

--- a/src/containers/Boost/Boost.scss
+++ b/src/containers/Boost/Boost.scss
@@ -14,10 +14,13 @@
   }
 
   .boost-wrapper {
-    margin-bottom: 12px;
 
     .boost-button {
       margin-bottom: 24px;
     }
+  }
+
+  hr {
+    margin: 16px 0;
   }
 }
