Add QRCode placeholder to Export Wallet screen

--- a/src/containers/ExportWallet/ExportWallet.scss
+++ b/src/containers/ExportWallet/ExportWallet.scss
@@ -6,4 +6,10 @@
   hr {
     margin: 8px 0 24px 0;
   }
+
+  #qr-code-canvas {
+    height: 300px !important;
+    margin-top: 8px;
+    width: 300px !important;
+  }
 }
