Add ui-theme change handling

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -79,6 +79,8 @@ input[type="number"], input[type="text"] {
 .theme-wrapper {
   display: flex;
   flex: 1;
+
+  background-color: #777777;
 }
 
 .fill-space {
