--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -1,7 +1,7 @@
 body {
   display: flex;
-  width: 360px;
-  height: 500px;
+  width: 0;
+  height: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,6 +9,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+  background-color: #777777;
+
+  #app-container {
+    display: none;
+  }
+}
+
+body.show {
+  width: 360px;
+  height: 500px;
+
+  #app-container {
+    display: flex;
+    flex: 1;
+  }
 }
 
 #app-container {
