Update podnews theme colors

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -46,10 +46,10 @@ $themes: (
     'textColor': #E2DED6,
     'textSecondaryColor': #AAAAAA,
 
-    'textInputBackgroundColor': #0F1235,
-    'textInputBorderColor': #252a6499,
-    'textInputEyebrowColor': #74A8DC,
-    'textInputFocusBorderColor': #007fff,
+    'textInputBackgroundColor': #121212,
+    'textInputBorderColor': #333333,
+    'textInputEyebrowColor': #F13232,
+    'textInputFocusBorderColor': #F13232,
     'textInputPlaceholderColor': #AAAAAA,
     'textInputTextColor': #E2DED6
   ),
